--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body {
   text-align: center;
   font-family: 'Mukta', sans-serif;
 }
+
+h1 {
+  font-size: 45px;
+}
+
+h2 {
+  font-size: 23px;
+}
+
+p {
+  font-size: 19px;
+}
