--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   font-size: 45px;
+  background-color: #b5937d
 }
 
 h2 {
@@ -24,7 +25,7 @@ img{
 
 nav{
   list-style-type: none;
-  background: #232889;
+  background: #a6a57a;
   float: left;
   display: block;
 }
