--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   font-size: 45px;
-  background-color: #b5937d
+  background-color: #B5937D
 }
 
 h2 {
@@ -25,7 +25,7 @@ img{
 
 nav{
   list-style-type: none;
-  background: #a6a57a;
+  background: #A6A57A;
   float: left;
   display: block;
 }
@@ -35,4 +35,9 @@ li a{
   font-size: 18px;
   padding: 20px;
   color: black;
+}
+
+a{
+  color: #4B6E95;
+  text-decoration: none;
 }
