--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1 {
 
 h2 {
   font-size: 23px;
+  font-style: bold;
 }
 
 p {
@@ -35,6 +36,10 @@ li a{
   font-size: 18px;
   padding: 20px;
   color: black;
+  list-style-type: none;
+}
+
+ul{
   list-style-type: none;
 }
 
