--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 h1 {
   font-size: 45px;
   background-color: #B5937D
-  margin-bottom: -6px;
+  margin-bottom: 0px;
 }
 
 h2 {
@@ -30,7 +30,7 @@ nav{
   background: #A6A57A;
   float: center;
   display: flex;
-  margin-top: 0;
+  margin-top: -3px;
 }
 
 li a{
