--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ nav{
   background: #A6A57A;
   float: center;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: 19px;
   margin-top: 0;
 }
