--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   font-size: 19px;
   margin-top: 0;
   font-size: 19px;
