--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
   font-size: 45px;
   background: #A6A57A;
   margin-bottom: 0;
+  margin-top: 0;
   border: 20px;
 }
 
@@ -42,7 +43,6 @@ nav{
 li a{
   display: block;
   font-size: 19px;
-  padding: 20px;
   color: black;
   list-style-type: none;
   text-align: center;
