--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ nav{
 li a{
   display: block;
   font-size: 19px;
+  padding: 40px;
   color: black;
   list-style-type: none;
   text-align: center;
