--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h2 {
 p {
   font-size: 19px;
   text-align: left;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 img{
@@ -45,7 +45,7 @@ nav{
 li a{
   display: block;
   font-size: 19px;
-  padding: 40px;
+  padding: 30px;
   color: black;
   list-style-type: none;
   text-align: center;
@@ -77,6 +77,5 @@ a:hover{
 }
 
 #pop-img{
-  margin-left: 8px;
-  margin-right: 8px;
+  margin: 8px;
 }
