--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul{
   float: center;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
   font-size: 19px;
 }
