--- a/style.css
+++ b/style.css
@@ -76,3 +76,10 @@ a{
 a:hover{
   background-color: grey;
 }
+
+.projectheader{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
