--- a/style.css
+++ b/style.css
@@ -78,8 +78,11 @@ a:hover{
 }
 
 .projectheader{
-  width: 50%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+#header {
+  width: 50%;
 }
