quiz formatting test

--- a/style.css
+++ b/style.css
@@ -103,8 +103,6 @@ strong{
 .answers {
   list-style-type: circle;
   font-size: 19px;
-  padding: 20px;
-  float: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -114,4 +112,6 @@ strong{
 .question {
   font-family: 'Merriweather', serif;
   font-size: 23px;
+  border-color: black;
+  border: 1px;
 }
