--- a/style.css
+++ b/style.css
@@ -162,3 +162,23 @@ strong{
     font-size: 30px;
   }
 }
+
+@media screen and (min-width:860px){
+
+  .popup{
+    width: 850px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #header{
+    width: 25%;
+  }
+
+  li a{
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+
+}
