--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 h2 {
   font-size: 23px;
   font-style: bold;
+  font-family: 'Merriweather', serif;
 }
 
 p {
@@ -99,7 +100,8 @@ a:hover{
 
 strong{
   font-size: 19px;
-  margin-top: 8px
+  margin-top: 8px;
+  font-family: 'Merriweather', serif;
 }
 
 .quiz {
