--- a/style.css
+++ b/style.css
@@ -182,6 +182,11 @@ strong{
   margin-right:80px;
 }
 
+.body-intro{
+  margin-left: 80px;
+  margin-right:80px;
+}
+
   .history{
     width:90%;
   }
@@ -196,11 +201,9 @@ strong{
 
 @media screen and (min-width:860px){
 
-  .popup{
-    width: 850px;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+  .homeside{
+    display: flex;
+    flex-wrap: wrap;
   }
 
   #header{
@@ -219,6 +222,30 @@ strong{
 }
 
 @media screen and (min-width:900px){
+
+  #intro{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    width: 60%;
+  }
+
+  .intro-body{
+    margin: 10px;
+    padding: 0px;
+  }
+
+  .homeside{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+
+  .popup{
+    width: 25%;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    margin: 20px;
+  }
 
   .popup-materials{
     width: 25%;
